--- a/src/pages/UncontrolledFormPage/UncontrolledFormPage.module.css
+++ b/src/pages/UncontrolledFormPage/UncontrolledFormPage.module.css
@@ -24,5 +24,8 @@
 }
 
 .main {
-  margin-top: 20px;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
