--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,12 @@
   background-color: #ffffff;
   padding: 20px 0;
   border-bottom: 1px solid #ddd;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .navList {
@@ -25,4 +31,8 @@
 
 .navLink:hover {
   color: #ff6f61;
+}
+
+.mainPage {
+  margin-top: 80px;
 }
