--- a/src/pages/UncontrolledFormPage/UncontrolledFormPage.module.css
+++ b/src/pages/UncontrolledFormPage/UncontrolledFormPage.module.css
@@ -1,26 +1,32 @@
-.page {
+.container {
   padding: 20px;
 }
 
-.navList {
+.header {
+  margin-bottom: 20px;
+}
+
+.nav ul {
+  text-decoration: none;
+  font-size: 18px;
+  color: #333;
+  margin-right: 25px;
+  transition: color 0.3s ease-in-out;
+}
+
+.nav li {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
 
-.navItem {
-  margin-bottom: 15px;
-}
-
-.navLink {
+.nav a {
   text-decoration: none;
   font-size: 18px;
   color: #333;
   transition: color 0.3s ease-in-out;
 }
 
-.navLink:hover {
-  color: #ff6f61;
+.nav a:hover {
+  color: #e55a4f;
 }
 
 .main {
