--- a/src/components/ControlledForm/ControlledForm.module.css
+++ b/src/components/ControlledForm/ControlledForm.module.css
@@ -99,3 +99,29 @@
 .input option {
   padding: 8px 12px;
 }
+
+.passwordContainer {
+  position: relative;
+  border: none;
+}
+
+.togglePassword {
+  position: absolute;
+  right: 40px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: 1px solid white;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+  padding: 1px;
+}
+.togglePassword button:focus {
+  outline: none;
+}
+
+.newData {
+  border: 2px solid #4caf50;
+  background-color: #e8f5e9;
+}
